--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-dom": "17.0.2",
     "react-hook-form": "7.12.2",
+    "react-loader-spinner": "^4.0.0",
     "react-notifications": "1.7.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0"
